compiler/lyra/src/test/resources/semantic_errors/SwitchBadCaseType.ly
class Application {
    def main {
        Int x = 1;
        switch x {
            case 1:
                out.writeln("1");
            case "error":
                out.writeln("i'm wrong!");
        }
    }
}